2002-03-17  Jonathan Blandford  <set EMAIL_ADDRESS environment variable>

	reviewed by: <delete if not using a buddy>

	* Makefile.am:
	* theme-common.c: (themes_common_list_add_dir),
	(theme_common_get_list), (theme_common_list_free):
	* theme-common.h:

2002-03-14  Richard Hestilow  <hestilow@ximian.com>

	* gconf-property-editor.c:
	(gconf_property_editor_new_option_menu_with_enum):
	(gconf_property_editor_new_enum_toggle): Added.
	(gconf_property_editor_new): Accept custom arguments from the
	editor "subclass".
	(gconf_property_editor_class_init): Add arguments "data"
	and "data-free-cb", for custom "subclass" data.
	(gconf_property_editor_finalize): Free custom data.
	(*_new): Add NULL at the end of gconf_property_editor_new.
	(guard_value_changed, peditor_widget_set_guard): Use the
	enum->boolean mapping if the gconf value is a string.

2002-03-10  Seth Nickell  <snickell@stanford.edu>

	* Makefile.am:
	* activate-settings-daemon.c: (popup_error_message),
	(activate_settings_daemon):
	* activate-settings-daemon.h:

	Add new client interface for activating the settings daemon
	if its not already running.
	
2002-02-27  Kjartan Maraas  <kmaraas@gnome.org>

	* capplet-util.c: s/PACKAGE/GETTEXT_PACKAGE/g
	
2002-02-12  Lauris Kaplinski  <lauris@ximian.com>

	* gconf-property-editor.c (peditor_font_value_changed): Kill warning

2002-02-10  Richard Hestilow  <hestilow@ximian.com>

	* gconf-property-editor.[ch]: Added font editor.

Sun Jan  6 02:52:59 2002  Jonathan Blandford  <jrb@redhat.com>

	* gconf-property-editor.c (peditor_select_radio_widget_changed):
	avoid recursive loops by only setting the UI if we're active.

2002-01-05  Bradford Hovinen  <hovinen@ximian.com>

	* gconf-property-editor.c (peditor_*_value_changed): Only remove
	from changeset if the changeset is non-NULL

2002-01-04  Bradford Hovinen  <hovinen@ximian.com>

	* gconf-property-editor.c (peditor_set_gconf_value):
	Implement. Sets the GConf value either in the changeset, or if